--- a/index.html
+++ b/index.html
@@ -307,8 +307,9 @@ body{margin:0;background:#fff;color:var(--text);font-family:"Open Sans",system-u
               </span>
               <h3 class="title">Menos stress</h3>
             </div>
-            <p class="desc">Fluxo fluido, com tempo para o que importa.</p>
+            <p class="desc">Produção, reportagem e edição no flow que leva o jornal ao ar.</p>
           </article>
+
         </div>
       </div>
     </div>
