--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ body{margin:0;background:#fff;color:var(--text);font-family:"Open Sans",system-u
           </div>
         </div>
         <div class="card">
-          <h2 class="tight" style="margin-top:0">Multi-dispositivo. Licenciamento que cabe na operação.</h2>
+          <h2 class="tight" style="margin-top:0">Multi-dispositivo que cabe na operação.</h2>
           <ul style="margin:0 0 10px 18px">
             <li><strong>Onde a notícia estiver</strong>: desktop no estúdio, tablet na edição, celular em externa.</li>
             <li><strong>Implantação simples</strong>: comece leve e escale conforme a equipe cresce.</li>
